Adjust walking-suggestion-service to use debain-buster and r-base version 3.5.2

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -50,6 +50,14 @@ services:
     depends_on:
       - db
       - rabbitmq
+  service-template:
+    extends:
+      file: docker-compose.activity-suggestions.yaml
+      service: service-template
+  walking-suggestion-service:
+    extends:
+      file: docker-compose.activity-suggestions.yaml
+      service: walking-suggestion-service
 volumes:
   client-platforms:
   client-node-modules:
