--- a/docker-compose.activity-suggestions.yaml
+++ b/docker-compose.activity-suggestions.yaml
@@ -18,8 +18,16 @@ services:
         ports:
             - "8888:8893"
             - "5002:8000"
+    service-template:
+        build:
+            context: ./
+            dockerfile: ./service-template/Dockerfile
+        volumes:
+            - ./service-template/utils:/utils
     walking-suggestion-service:
-        build: ./walking-suggestion-service
+        build:
+            context: ./
+            dockerfile: ./walking-suggestion-service/Dockerfile
         command: python app.py
         volumes:
             - ./walking-suggestion-service:/walking-suggestion-service
