#127 Remove participant update call from root and app updates url if "/"

--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
     "lint": "ionic-app-scripts lint",
+    "dev": "ionic-app-scripts serve --appEntryPoint /client/src/app/main.ts",
     "build:app": "ionic-app-scripts build --appEntryPoint /client/src/app/main.ts",
     "build:app:android": "ionic cordova build android --release --buildConfig=/credentials/androidplay-build.json --appEntryPoint /client/src/app/main.ts",
     "build:app:android:debug": "ionic cordova build android --appEntryPoint /client/src/app/main.ts",
