--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -32,17 +32,23 @@ openpyxl==2.5.14
 phonenumbers==8.10.11
 psycopg2-binary==2.7.4
 pyfcm==1.4.5
+PyJWT==1.7.1
+PySocks==1.7.1
 python-dateutil==2.7.3
+python-http-client==3.2.7
+python-slugify==4.0.0
 pytz==2018.4
 PyYAML==3.13
 requests==2.19.1
 requests-oauthlib==1.0.0
 requests-toolbelt==0.8.0
+sendgrid==3.6.5
 sendgrid-django==4.2.0
 Shapely==1.6.4.post2
 simplejson==3.16.0
 six==1.11.0
 tablib==0.12.1
+text-unidecode==1.3
 timezonefinder==3.1.0
 twilio==6.26.3
 unicodecsv==0.14.1
