--- a/server/Procfile
+++ b/server/Procfile
@@ -1,6 +1,7 @@
 dev: ./manage.py runserver 0.0.0.0:8080
 web: gunicorn -b :8080 heartsteps.wsgi:application --log-level debug
-celery: celery worker -A heartsteps -l info -Q default,export,fitbit,messages
+celery: celery worker -A heartsteps -l info -Q default,fitbit,messages
 celeryMessages: celery worker -A heartsteps -l info -Q messages
+celeryExport: celery worker -A heartsteps -l info -Q export
 beat: celery beat -A heartsteps -l info --scheduler django_celery_beat.schedulers:DatabaseScheduler
 cloudsql: /cloud_sql_proxy -dir=/cloudsql -instances=heartsteps-kpwhri:us-west1:heartsteps-kpw -credential_file=/credentials/google-service-account.json
