--- a/fitbit/package.json
+++ b/fitbit/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "license": "UNLICENSED",
   "fitbit": {
-    "appUUID": "0bd06f9e-2adc-4391-ab05-d177dda1a167",
+    "appUUID": "449d190e-fd35-4721-972f-a7c479c26349",
     "appType": "clockface",
     "appDisplayName": "HeartSteps",
     "iconFile": "resources/icon.png",
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@fitbit/sdk-cli": "^1.7.0",
+    "buffer": "^5.6.0",
     "gulp": "^4.0.2",
     "io-ts": "^2.0.1",
     "keytar": "^5.0.0-beta.2",
