Add password change and reset functions from Django

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -73,6 +73,15 @@ http {
             proxy_pass https://storage.googleapis.com/heartsteps-assets/static;
         }
 
+        location /accounts {
+            proxy_pass http://server:8080/accounts;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+        }
+
         location /admin {
             proxy_pass http://server:8080/admin;
             proxy_redirect     off;
