--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,13 +1,13 @@
-amqp==2.3.2
-billiard==3.5.0.4
-celery==4.2.0
+amqp==2.6.1
+billiard==3.6.3.0
+celery==4.4.7
 certifi==2018.4.16
 chardet==3.0.4
 defusedxml==0.5.0
 diff-match-patch==20181111
 Django==1.11.13
 django-celery-beat==1.1.1
-django-celery-results==1.0.1
+django-celery-results==1.2.1
 django-cors-headers==2.4.0
 django-environ==0.4.4
 django-filter==1.1.0
@@ -21,8 +21,9 @@ geopy==1.16.0
 gunicorn==19.8.1
 honcho==1.0.1
 idna==2.7
+importlib-metadata==2.0.0
 jdcal==1.4
-kombu==4.2.1
+kombu==4.6.11
 kwargs-only==1.0.0
 Markdown==2.6.11
 numpy==1.15.2
@@ -53,6 +54,7 @@ timezonefinder==3.1.0
 twilio==6.26.3
 unicodecsv==0.14.1
 urllib3==1.23
-vine==1.1.4
+vine==1.3.0
 xlrd==1.2.0
 xlwt==1.3.0
+zipp==3.4.0
