--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,19 +1,22 @@
 amqp==2.6.1
+asgiref==3.3.1
 billiard==3.6.3.0
 celery==4.4.7
 certifi==2018.4.16
 chardet==3.0.4
 defusedxml==0.5.0
 diff-match-patch==20181111
-Django==1.11.13
-django-celery-beat==1.1.1
+Django==3.1.7
+django-celery-beat==1.4.0
 django-celery-results==1.2.1
 django-cors-headers==2.4.0
 django-environ==0.4.4
 django-filter==1.1.0
-django-import-export==1.2.0
+django-import-export==2.4.0
+django-timezone-field==4.1.1
+django-utils-six==2.0
 django-uuidfield==0.5.0
-djangorestframework==3.8.2
+djangorestframework==3.12.1
 et-xmlfile==1.0.1
 fitbit==0.3.0
 geographiclib==1.49
@@ -26,15 +29,17 @@ jdcal==1.4
 kombu==4.6.11
 kwargs-only==1.0.0
 Markdown==2.6.11
+MarkupPy==1.14
 numpy==1.15.2
 oauthlib==2.1.0
 odfpy==1.4.0
-openpyxl==2.5.14
+openpyxl==3.0.6
 phonenumbers==8.10.11
 psycopg2-binary==2.7.4
 pyfcm==1.4.5
 PyJWT==1.7.1
 PySocks==1.7.1
+python-crontab==2.5.1
 python-dateutil==2.7.3
 python-http-client==3.2.7
 python-slugify==4.0.0
@@ -48,7 +53,8 @@ sendgrid-django==4.2.0
 Shapely==1.6.4.post2
 simplejson==3.16.0
 six==1.11.0
-tablib==0.12.1
+sqlparse==0.4.1
+tablib==3.0.0
 text-unidecode==1.3
 timezonefinder==3.1.0
 twilio==6.26.3
