--- a/client/package.json
+++ b/client/package.json
@@ -44,24 +44,12 @@
     "axios": "^0.18.0",
     "cordova-android": "^8.1.0",
     "cordova-inappbrowser": "^1.0.6",
-    "cordova-ios": "5.1.1",
-    "cordova-plugin-advanced-http": "^1.11.1",
-    "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-file": "^6.0.1",
-    "cordova-plugin-inappbrowser": "^3.0.0",
-    "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^1.2.1",
-    "cordova-plugin-safariviewcontroller": "^1.5.4",
-    "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "^1.3.3",
     "d3": "^5.7.0",
     "firebase": "^5.1.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "moment": "^2.24.0",
     "node-sass": "^4.9.0",
-    "onesignal-cordova-plugin": "^2.8.1",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "url-join": "^4.0.0",
@@ -74,10 +62,22 @@
     "@types/jest": "^23.3.3",
     "@types/node": "^10.10.1",
     "cordova-icon": "^1.0.0",
+    "cordova-ios": "^6.0.0",
+    "cordova-plugin-advanced-http": "^3.1.0",
+    "cordova-plugin-device": "^2.0.3",
+    "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-inappbrowser": "^5.0.0",
+    "cordova-plugin-ionic-keyboard": "^2.2.0",
+    "cordova-plugin-ionic-webview": "^5.0.0",
+    "cordova-plugin-safariviewcontroller": "^2.0.0",
+    "cordova-plugin-splashscreen": "^6.0.0",
+    "cordova-plugin-statusbar": "^2.4.3",
+    "cordova-plugin-whitelist": "^1.3.4",
     "cordova-splash": "^1.0.0",
     "dotenv": "^6.0.0",
     "jest": "^23.6.0",
     "jest-preset-angular": "^6.0.1",
+    "onesignal-cordova-plugin": "^2.11.3",
     "tslint": "^5.11.0",
     "typescript": "~2.6.2",
     "xml2js": "^0.4.23",
@@ -112,26 +112,26 @@
   },
   "cordova": {
     "plugins": {
-      "cordova-plugin-whitelist": {},
-      "cordova-plugin-device": {},
-      "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-advanced-http": {},
-      "cordova-plugin-statusbar": {},
-      "cordova-plugin-inappbrowser": {},
-      "cordova-plugin-safariviewcontroller": {},
       "cordova-plugin-customurlscheme": {
         "URL_SCHEME": "comnickreidheartsteps",
         "ANDROID_SCHEME": " ",
         "ANDROID_HOST": " ",
         "ANDROID_PATHPREFIX": "/"
       },
-      "onesignal-cordova-plugin": {}
+      "cordova-plugin-inappbrowser": {},
+      "cordova-plugin-splashscreen": {},
+      "onesignal-cordova-plugin": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-advanced-http": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-safariviewcontroller": {}
     },
     "platforms": [
-      "ios",
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
