--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -26,6 +26,7 @@ honcho==1.0.1
 idna==2.7
 importlib-metadata==2.0.0
 jdcal==1.4
+jsonfield==3.1.0
 kombu==4.6.11
 kwargs-only==1.0.0
 Markdown==2.6.11
