--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -13,6 +13,7 @@ django-cors-headers==2.4.0
 django-environ==0.4.4
 django-filter==1.1.0
 django-import-export==2.4.0
+django-silk==4.1.0
 django-timezone-field==4.1.1
 django-utils-six==2.0
 django-uuidfield==0.5.0
