--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -109,6 +109,15 @@ http {
             proxy_set_header   X-Forwarded-Host $server_name;
         }
 
+        location /silk {
+            proxy_pass http://server:8080/silk;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+        }
+
         location /twilio {
             proxy_pass http://server:8080/twilio;
             proxy_redirect     off;
