added ios client transpile docker

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -18,7 +18,8 @@
       "@pages/*": ["pages/*"]
     },
     "sourceMap": true,
-    "target": "es5"
+    "target": "es5",
+    "types": []
   },
   "include": [
     "src/**/*.ts"
