--- a/client/package.json
+++ b/client/package.json
@@ -1,137 +1,140 @@
 {
-  "name": "heartsteps",
-  "version": "2.0.0",
-  "author": "Nick Reid",
-  "homepage": "http://nickreid.com/",
-  "private": true,
-  "scripts": {
-    "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build",
-    "lint": "ionic-app-scripts lint",
-    "dev": "ionic-app-scripts serve --appEntryPoint /client/src/app/main.ts",
-    "build:app": "ionic-app-scripts build --appEntryPoint /client/src/app/main.ts",
-    "build:app:android": "ionic cordova build android --release --buildConfig=/credentials/build.json --appEntryPoint /client/src/app/main.ts",
-    "build:app:android:debug": "ionic cordova build android --appEntryPoint /client/src/app/main.ts",
-    "build:app:ios": "ionic cordova prepare ios --prod --appEntryPoint /client/src/app/main.ts --buildFlag='-UseModernBuildSystem=0'",
-    "serve:app": "ionic-app-scripts serve --appEntryPoint /client/src/app/main.ts",
-    "build:website": "ionic-app-scripts build --appEntryPoint /client/src/website/main.ts --appNgModulePath /client/src/website/app.module.ts",
-    "serve:website": "ionic-app-scripts serve --appEntryPoint /client/src/website/main.ts --appNgModulePath /client/src/website/app.module.ts",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:ci": "jest --runInBand",
-    "test:coverage": "jest --coverage"
-  },
-  "dependencies": {
-    "@angular/animations": "5.2.10",
-    "@angular/cdk": "5.2.1",
-    "@angular/common": "5.2.10",
-    "@angular/compiler": "5.2.10",
-    "@angular/compiler-cli": "5.2.10",
-    "@angular/core": "5.2.10",
-    "@angular/forms": "5.2.10",
-    "@angular/http": "5.2.10",
-    "@angular/material": "^5.2.1",
-    "@angular/platform-browser": "5.2.10",
-    "@angular/platform-browser-dynamic": "5.2.10",
-    "@angular/router": "5.2.10",
-    "@ionic-native/core": "4.11.0",
-    "@ionic-native/http": "^4.9.1",
-    "@ionic-native/in-app-browser": "^4.15.0",
-    "@ionic-native/safari-view-controller": "^4.15.0",
-    "@ionic-native/splash-screen": "4.7.0",
-    "@ionic-native/status-bar": "4.7.0",
-    "@ionic/storage": "2.1.3",
-    "axios": "^0.18.0",
-    "cordova-android": "^8.1.0",
-    "cordova-inappbrowser": "^1.0.6",
-    "d3": "^5.7.0",
-    "firebase": "^5.1.0",
-    "ionic-angular": "3.9.2",
-    "ionicons": "3.0.0",
-    "moment": "^2.24.0",
-    "node-sass": "^4.9.0",
-    "rxjs": "5.5.11",
-    "sw-toolbox": "3.6.0",
-    "url-join": "^4.0.0",
-    "xml": "^1.0.1",
-    "zone.js": "0.8.26"
-  },
-  "devDependencies": {
-    "@ionic/app-scripts": "3.1.9",
-    "@types/d3": "^5.0.1",
-    "@types/jest": "^23.3.3",
-    "@types/node": "^10.10.1",
-    "cordova-icon": "^1.0.0",
-    "cordova-ios": "^6.0.0",
-    "cordova-plugin-advanced-http": "^3.1.0",
-    "cordova-plugin-device": "^2.0.3",
-    "cordova-plugin-file": "^6.0.2",
-    "cordova-plugin-inappbrowser": "^5.0.0",
-    "cordova-plugin-ionic-keyboard": "^2.2.0",
-    "cordova-plugin-ionic-webview": "^5.0.0",
-    "cordova-plugin-safariviewcontroller": "^2.0.0",
-    "cordova-plugin-splashscreen": "^6.0.0",
-    "cordova-plugin-statusbar": "^2.4.3",
-    "cordova-plugin-whitelist": "^1.3.4",
-    "cordova-splash": "^1.0.0",
-    "dotenv": "^6.0.0",
-    "jest": "^23.6.0",
-    "jest-preset-angular": "^6.0.1",
-    "onesignal-cordova-plugin": "^2.11.3",
-    "tslint": "^5.11.0",
-    "typescript": "~2.6.2",
-    "xml2js": "^0.4.23",
-    "xmlbuilder": "^13.0.2"
-  },
-  "description": "An Ionic project",
-  "config": {
-    "ionic_copy": "./config/ionic-copy-config.js",
-    "ionic_webpack": "./config/webpack.config.js"
-  },
-  "jest": {
-    "globals": {
-      "ts-jest": {
-        "tsConfigFile": "<rootDir>/tsconfig.spec.json"
-      },
-      "__TRANSFORM_HTML__": true
+    "name": "heartsteps",
+    "version": "2.0.0",
+    "author": "Nick Reid",
+    "homepage": "http://nickreid.com/",
+    "private": true,
+    "scripts": {
+        "clean": "ionic-app-scripts clean",
+        "build": "ionic-app-scripts build",
+        "lint": "ionic-app-scripts lint",
+        "dev": "ionic-app-scripts serve --appEntryPoint /client/src/app/main.ts",
+        "build:app": "ionic-app-scripts build --appEntryPoint /client/src/app/main.ts",
+        "build:app:android": "ionic cordova build android --release --buildConfig=/credentials/build.json --appEntryPoint /client/src/app/main.ts",
+        "build:app:android:debug": "ionic cordova build android --appEntryPoint /client/src/app/main.ts",
+        "build:app:ios": "ionic cordova prepare ios --prod --appEntryPoint /client/src/app/main.ts --buildFlag='-UseModernBuildSystem=0'",
+        "serve:app": "ionic-app-scripts serve --appEntryPoint /client/src/app/main.ts",
+        "build:website": "ionic-app-scripts build --appEntryPoint /client/src/website/main.ts --appNgModulePath /client/src/website/app.module.ts",
+        "serve:website": "ionic-app-scripts serve --appEntryPoint /client/src/website/main.ts --appNgModulePath /client/src/website/app.module.ts",
+        "test": "jest",
+        "test:watch": "jest --watch",
+        "test:ci": "jest --runInBand",
+        "test:coverage": "jest --coverage"
     },
-    "preset": "jest-preset-angular",
-    "roots": [
-      "<rootDir>/src/"
-    ],
-    "moduleNameMapper": {
-      "@app/(.*)": "<rootDir>/src/app/$1",
-      "@pages/(.*)": "<rootDir>/src/pages/$1",
-      "@infrastructure/(.*)": "<rootDir>/src/infrastructure/$1",
-      "@heartsteps/(.*)": "<rootDir>/src/heartsteps/$1"
+    "dependencies": {
+        "@angular/animations": "5.2.11",
+        "@angular/cdk": "5.2.5",
+        "@angular/common": "5.2.11",
+        "@angular/compiler": "5.2.11",
+        "@angular/compiler-cli": "5.2.11",
+        "@angular/core": "^5.2.11",
+        "@angular/forms": "5.2.11",
+        "@angular/http": "5.2.11",
+        "@angular/material": "5.2.5",
+        "@angular/platform-browser": "5.2.11",
+        "@angular/platform-browser-dynamic": "5.2.11",
+        "@angular/router": "5.2.11",
+        "@ionic-native/core": "~4.17.0",
+        "@ionic-native/http": "~4.17.0",
+        "@ionic-native/in-app-browser": "~4.17.0",
+        "@ionic-native/safari-view-controller": "~4.17.0",
+        "@ionic-native/splash-screen": "~4.17.0",
+        "@ionic-native/status-bar": "~4.17.0",
+        "@ionic/storage": "2.2.0",
+        "axios": "^0.18.1",
+        "cordova-android": "^8.1.0",
+        "cordova-inappbrowser": "^1.0.6",
+        "d3": "^5.16.0",
+        "firebase": "^5.11.1",
+        "ionic": "^5.4.16",
+        "ionic-angular": "3.9.10",
+        "ionicons": "3.0.0",
+        "moment": "^2.29.1",
+        "node-sass": "^6.0.0",
+        "rxjs": "5.5.11",
+        "sw-toolbox": "3.6.0",
+        "tsc": "^2.0.3",
+        "url-join": "^4.0.1",
+        "xml": "^1.0.1",
+        "zone.js": "0.8.26"
     },
-    "setupTestFrameworkScriptFile": "<rootDir>/jest.setup.ts",
-    "transformIgnorePatterns": [
-      "node_modules/(?!@ngrx|@ionic-native|@ionic)"
-    ]
-  },
-  "cordova": {
-    "plugins": {
-      "cordova-plugin-customurlscheme": {
-        "URL_SCHEME": "comnickreidheartsteps",
-        "ANDROID_SCHEME": " ",
-        "ANDROID_HOST": " ",
-        "ANDROID_PATHPREFIX": "/"
-      },
-      "cordova-plugin-inappbrowser": {},
-      "cordova-plugin-splashscreen": {},
-      "onesignal-cordova-plugin": {},
-      "cordova-plugin-whitelist": {},
-      "cordova-plugin-device": {},
-      "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-advanced-http": {},
-      "cordova-plugin-statusbar": {},
-      "cordova-plugin-safariviewcontroller": {}
+    "devDependencies": {
+        "@ionic/app-scripts": "3.2.4",
+        "@types/d3": "^5.16.4",
+        "@types/jest": "^23.3.14",
+        "@types/node": "^10.17.60",
+        "cordova-icon": "^1.0.0",
+        "cordova-ios": "6.2.0",
+        "cordova-plugin-advanced-http": "^3.1.0",
+        "cordova-plugin-customurlscheme": "^5.0.2",
+        "cordova-plugin-device": "^2.0.3",
+        "cordova-plugin-file": "^6.0.2",
+        "cordova-plugin-inappbrowser": "^5.0.0",
+        "cordova-plugin-ionic-keyboard": "^2.2.0",
+        "cordova-plugin-ionic-webview": "^5.0.0",
+        "cordova-plugin-safariviewcontroller": "^2.0.0",
+        "cordova-plugin-splashscreen": "^6.0.0",
+        "cordova-plugin-statusbar": "^2.4.3",
+        "cordova-plugin-whitelist": "^1.3.4",
+        "cordova-splash": "^1.0.0",
+        "dotenv": "^6.2.0",
+        "jest": "^23.6.0",
+        "jest-preset-angular": "^6.0.2",
+        "onesignal-cordova-plugin": "^2.11.3",
+        "tslint": "^5.20.1",
+        "typescript": "~2.6.2",
+        "xml2js": "^0.4.23",
+        "xmlbuilder": "^13.0.2"
     },
-    "platforms": [
-      "android",
-      "ios"
-    ]
-  }
+    "description": "An Ionic project",
+    "config": {
+        "ionic_copy": "./config/ionic-copy-config.js",
+        "ionic_webpack": "./config/webpack.config.js"
+    },
+    "jest": {
+        "globals": {
+            "ts-jest": {
+                "tsConfigFile": "<rootDir>/tsconfig.spec.json"
+            },
+            "__TRANSFORM_HTML__": true
+        },
+        "preset": "jest-preset-angular",
+        "roots": [
+            "<rootDir>/src/"
+        ],
+        "moduleNameMapper": {
+            "@app/(.*)": "<rootDir>/src/app/$1",
+            "@pages/(.*)": "<rootDir>/src/pages/$1",
+            "@infrastructure/(.*)": "<rootDir>/src/infrastructure/$1",
+            "@heartsteps/(.*)": "<rootDir>/src/heartsteps/$1"
+        },
+        "setupTestFrameworkScriptFile": "<rootDir>/jest.setup.ts",
+        "transformIgnorePatterns": [
+            "node_modules/(?!@ngrx|@ionic-native|@ionic)"
+        ]
+    },
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-customurlscheme": {
+                "URL_SCHEME": "comnickreidheartsteps",
+                "ANDROID_SCHEME": " ",
+                "ANDROID_HOST": " ",
+                "ANDROID_PATHPREFIX": "/"
+            },
+            "cordova-plugin-inappbrowser": {},
+            "cordova-plugin-splashscreen": {},
+            "onesignal-cordova-plugin": {},
+            "cordova-plugin-whitelist": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-ionic-webview": {},
+            "cordova-plugin-ionic-keyboard": {},
+            "cordova-plugin-advanced-http": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-safariviewcontroller": {}
+        },
+        "platforms": [
+            "android",
+            "ios"
+        ]
+    }
 }
