Added Generic Notification Feature (named "bout-planning" but will be changed soon)
- Added Generic Notification Feature (named "bout-planning" but will be changed soon.
- Added an Angular Compiler Option
- Added "Hello, [username]" in client settings page

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -32,5 +32,8 @@
   "compileOnSave": false,
   "atom": {
     "rewriteTsconfig": false
+  },
+  "angularCompilerOptions": {
+    "strictTemplates": true
   }
 }
