--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,5 +1,6 @@
 amqp==2.6.1
 asgiref==3.3.1
+argh==0.26.2
 billiard==3.6.3.0
 celery==4.4.7
 certifi==2018.4.16
@@ -63,6 +64,7 @@ twilio==6.26.3
 unicodecsv==0.14.1
 urllib3==1.23
 vine==1.3.0
+watchdog==2.1.2
 xlrd==1.2.0
 xlwt==1.3.0
 zipp==3.4.0
