--- a/docker-compose.gcloud.yaml
+++ b/docker-compose.gcloud.yaml
@@ -1,7 +1,9 @@
 version: '2'
 services:
     client:
-        build: ./client
+        build: 
+            context: ./
+            dockerfile: client.Dockerfile
         env_file:
           - credentials/.env-production
         command: npm run serve:app
