updated markdown from 2.6.11 to 3.3.4 to fix compatibility issues between django and markdown.
PushMessageSerializer still not converting
notifications variable to correct output,
endpoint now works w/o django
compile errors though

--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,6 +1,6 @@
 amqp==2.6.1
 asgiref==3.3.1
-argh==0.26.2
+autopep8==1.5.7
 billiard==3.6.3.0
 celery==4.4.7
 certifi==2018.4.16
@@ -23,23 +23,28 @@ et-xmlfile==1.0.1
 fitbit==0.3.0
 geographiclib==1.49
 geopy==1.16.0
+gprof2dot==2021.2.21
 gunicorn==19.8.1
 honcho==1.0.1
 idna==2.7
 importlib-metadata==2.0.0
 jdcal==1.4
+Jinja2==3.0.0
 jsonfield==3.1.0
 kombu==4.6.11
 kwargs-only==1.0.0
-Markdown==2.6.11
+Markdown==3.3.4
 MarkupPy==1.14
+MarkupSafe==2.0.0
 numpy==1.15.2
 oauthlib==2.1.0
 odfpy==1.4.0
 openpyxl==3.0.6
 phonenumbers==8.10.11
 psycopg2-binary==2.7.4
+pycodestyle==2.7.0
 pyfcm==1.4.5
+Pygments==2.9.0
 PyJWT==1.7.1
 PySocks==1.7.1
 python-crontab==2.5.1
@@ -60,11 +65,11 @@ sqlparse==0.4.1
 tablib==3.0.0
 text-unidecode==1.3
 timezonefinder==3.1.0
+toml==0.10.2
 twilio==6.26.3
 unicodecsv==0.14.1
 urllib3==1.23
 vine==1.3.0
-watchdog==2.1.2
 xlrd==1.2.0
 xlwt==1.3.0
 zipp==3.4.0
