#205 Remove ionic wrapper around SafariViewController

--- a/client/package.json
+++ b/client/package.json
@@ -37,7 +37,6 @@
         "@ionic-native/core": "~4.17.0",
         "@ionic-native/http": "~4.17.0",
         "@ionic-native/in-app-browser": "~4.17.0",
-        "@ionic-native/safari-view-controller": "~4.17.0",
         "@ionic-native/splash-screen": "~4.17.0",
         "@ionic-native/status-bar": "~4.17.0",
         "@ionic/storage": "2.2.0",
@@ -64,7 +63,7 @@
         "@types/jest": "^23.3.14",
         "@types/node": "^10.17.60",
         "cordova-icon": "^1.0.0",
-        "cordova-ios": "6.2.0",
+        "cordova-ios": "^6.2.0",
         "cordova-plugin-advanced-http": "^3.1.0",
         "cordova-plugin-customurlscheme": "^5.0.2",
         "cordova-plugin-device": "^2.0.3",
