#207 Set correct .env file for client app

--- a/gcloud-dev.docker-compose.yaml
+++ b/gcloud-dev.docker-compose.yaml
@@ -3,7 +3,7 @@ services:
     client:
         build: ./client
         env_file:
-          - credentials/.env-production
+          - credentials/.env-gcloud-dev
         command: npm run serve:app
         volumes:
             - ./client:/client
