--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ before_script:
 - docker-compose build server > /dev/null
 - docker-compose build client > /dev/null
 - docker-compose run server python manage.py migrate > /dev/null
+- docker-compose run client npm install
 
 script:
 - docker-compose run server python manage.py test
