--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,4 +1,5 @@
 amqp==2.6.1
+argh==0.26.2
 asgiref==3.3.1
 autopep8==1.5.7
 billiard==3.6.3.0
@@ -70,6 +71,7 @@ twilio==6.26.3
 unicodecsv==0.14.1
 urllib3==1.23
 vine==1.3.0
+watchdog==2.1
 xlrd==1.2.0
 xlwt==1.3.0
 zipp==3.4.0
