--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,4 @@ dev-credentials.tar
 dev-credentials/.env-development
 dev-credentials/.env-gcloud-dev
 dev-credentials/gcloud-dev-service-account.json
+dev-credentials.tar.gpg
