--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -22,6 +22,7 @@ django-uuidfield==0.5.0
 djangorestframework==3.12.1
 et-xmlfile==1.0.1
 fitbit==0.3.0
+freezegun==1.1.0
 geographiclib==1.49
 geopy==1.16.0
 gprof2dot==2021.2.21
