--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
         "@ionic-native/status-bar": "~4.17.0",
         "@ionic/storage": "2.2.0",
         "axios": "^0.18.1",
+        "cordova": "^10.0.0",
         "cordova-android": "^8.1.0",
         "cordova-inappbrowser": "^1.0.6",
         "d3": "^5.16.0",
