--- a/fitbit-clock-face/package.json
+++ b/fitbit-clock-face/package.json
@@ -34,7 +34,6 @@
     "build": "fitbit-build"
   },
   "dependencies": {
-    "@fitbit/sdk-cli": "^1.7.0",
     "buffer": "^5.6.0",
     "gulp": "^4.0.2",
     "io-ts": "^2.0.1",
@@ -42,6 +41,7 @@
     "node-gyp": "^6.0.0"
   },
   "devDependencies": {
-    "@fitbit/sdk": "~4.0.0"
+    "@fitbit/sdk": "~4.2.0",
+    "@fitbit/sdk-cli": "^1.7.3"
   }
 }
