--- a/fitbit-clock-face/package.json
+++ b/fitbit-clock-face/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "buffer": "^5.6.0",
+    "fitbit": "0.0.7",
     "gulp": "^4.0.2",
     "io-ts": "^2.0.1",
     "keytar": "^5.0.0-beta.2",
