making celery working #280. edited the tutorial #284

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -34,7 +34,7 @@ services:
       - ALLOWED_HOSTS=localhost,server,192.168.99.100
       - DEBUG=True
       - DATABASE_URL=psql://postgres:password@db:5432/postgres
-    command: ["honcho", "start", "dev"]
+    command: ["honcho", "start", "dev", "celery2", "beat"]
     volumes:
       - ./server:/server
       - ./credentials:/credentials
