--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,6 +36,7 @@ services:
       - ALLOWED_HOSTS=localhost,server,192.168.99.100
       - DEBUG=True
       - DATABASE_URL=psql://postgres:password@db:5432/postgres
+    env_file: credentials/.env-development
     command: ["honcho", "start", "dev", "celery2", "beat"]
     volumes:
       - ./server:/server
